# chess-bot-uci

./: .gitignore  CMakeLists.txt  LICENSE  README.md  engine.js  package.json  uci.js
gauntlet/: analyze-pgn.js  compute-elo.js  openings.pgn  run-gauntlet.sh
scripts/: sync-engine.js
src/: bitboard.cpp  bitboard.hpp  eval.cpp  eval.hpp  magic.cpp  magic.hpp  main.cpp  movegen.cpp  movegen.hpp  position.cpp  position.hpp  search.cpp  search.hpp  tt.hpp  uci.cpp  uci.hpp
test/: perft.cpp  smoke.js  uci_smoke.js
